# basic_neural_torch

./: .gitignore  CMakeLists.txt  conanfile.txt  torch-demo.cpp
modules/classification/: CMakeLists.txt
modules/classification/include/: classification.h  classifier.h  dataset.h  model.h
modules/classification/src/: classifier.cpp  dataset.cpp  model.cpp
modules/classification/test/: classifier.cpp  dataset.cpp
